[package]
name = "dle-encoder"
version = "0.1.3"
authors = ["Robin Mueller <robin.mueller.m@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "DLE ASCII encoder and transport layer for Rust"
homepage = "https://github.com/robamu-org/rs-dle-encoder"
repository = "https://github.com/robamu-org/rs-dle-encoder"
keywords = ["encoding", "ascii", "transport", "decoding", "dle"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
